--- a/frontend/src/components/NavBar/styles.css
+++ b/frontend/src/components/NavBar/styles.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(138deg, rgba(52, 2, 24, 1) 18%, rgba(29, 8, 17, 0.9823943661971831) 97%, rgba(36, 8, 15, 1) 100%);
+    background: linear-gradient(138deg, rgb(31, 23, 26) 18%, rgba(29, 17, 22, 0.982) 70%, rgba(58, 12, 29, 0.982) 95%);
     height: 80px;
     display: flex;
     justify-content: space-between;
@@ -8,7 +8,8 @@
 }
 
 .navbar-logo {
-    color: #ffffff;
+    color: var(--sena);
+    height: 50px;
     justify-self: start;
     margin-left: 30px;
     margin-bottom: 40px;
@@ -24,7 +25,7 @@
 
 .nav-menu {
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(8, auto);
     grid-gap: 10px;
     list-style: none;
     text-align: center;
@@ -43,7 +44,7 @@
     color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .nav-links:hover {
@@ -97,13 +98,12 @@
         padding: 40px 30px 20px 30px;
     }
     .navbar-logo {
-        position: absolute;
         top: 0;
-        transform: translate(20%, 20%);
+        transform: translate(20%, 15%);
         justify-self: start;
         margin-left: 15px;
         margin-bottom: 30px;
-        height: 56px;
+        height: 50px;
     }
     .menu-icon {
         display: block;
@@ -128,28 +128,35 @@
     }
     .nav-links {
         display: block;
-        background: var(--tert);
+        background-color: var(--quar);
         text-align: center;
-        padding: 1.5rem;
+        padding: 1.7rem;
         margin: auto;
         width: 100%;
-        border-radius: 50px;
-        font-size: 1.5rem;
+        border-radius: 20px;
+        color: var(--sena);
+        font-size: 20px;
     }
     .nav-links:hover {
         background-color: var(--octo);
         transition: 250ms;
+        border-radius: 20px;
     }
     .nav-links-mobile {
         text-align: center;
-        padding: 1.5rem;
-        border-radius: 50px;
+        padding: 1.7rem;
+        border-radius: 20px;
         text-decoration: none;
-        color: #fff;
-        font-size: 1.5rem;
+        color: var(--sena);
+        font-size: 20px;
         display: table;
         width: 100%;
-        background-color: var(--tert);
+        background-color: var(--quar);
+    }
+    .nav-links-mobile:hover {
+        background-color: var(--octo);
+        color: #fff;
+        transition: 250ms;
     }
     .nav-links-image {
         display: flex;
@@ -157,15 +164,8 @@
         border-radius: 360px;
         border: 3px solid var(--tert);
         text-decoration: none;
-        color: #fff;
-        font-size: 1.5rem;
         width: 120px;
         height: 120px;
-    }
-    .nav-links-mobile:hover {
-        background-color: var(--octo);
-        color: #fff;
-        transition: 250ms;
     }
     button {
         display: none;
