--- a/frontend/src/components/QuestForm/styles.css
+++ b/frontend/src/components/QuestForm/styles.css
@@ -3,10 +3,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     border-radius: 10px;
-    color: var(--sena)
-}
-
-.cl-form {
+    color: var(--sena);
     width: calc(100% - 20px);
 }
 
