--- a/frontend/src/components/QuizzGame/styles.css
+++ b/frontend/src/components/QuizzGame/styles.css
@@ -1,3 +1,44 @@
+.card-md-container {
+    height: max-content;
+    padding: 10px;
+}
+
+.card-md-list {
+    height: max-content;
+    justify-content: space-evenly;
+    padding: 0;
+}
+
+.card-md-title {
+    display: flex;
+    height: 60px;
+    padding: 16px;
+    list-style: none;
+    font-size: large;
+    font-weight: 500;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-md-item {
+    display: flex;
+    padding: 0px;
+    margin: 2px;
+    height: 50px;
+    align-items: center;
+    border-top: 1px solid #b8b6b6;
+    transition: all 0.2s ease-in-out;
+}
+
+.card-md-content {
+    align-items: center;
+    list-style: none;
+    font-size: medium;
+    font-weight: 300;
+    padding: 8px;
+    margin: 0;
+}
+
 .quizz-container {
     display: flex;
     color: #fff;
