--- a/frontend/src/components/QuizzGame/styles.css
+++ b/frontend/src/components/QuizzGame/styles.css
@@ -1,6 +1,12 @@
 .card-md-container {
+    width: 400px;
     height: max-content;
     padding: 10px;
+    transition: all 0.2s ease-in;
+    cursor: pointer;
+    background-color: var(--deca);
+    border-radius: 12px;
+    border: 1px solid #b8b6b6;
 }
 
 .card-md-list {
@@ -24,7 +30,7 @@
     display: flex;
     padding: 0px;
     margin: 2px;
-    height: 50px;
+    height: 100px;
     align-items: center;
     border-top: 1px solid #b8b6b6;
     transition: all 0.2s ease-in-out;
@@ -79,4 +85,84 @@
 .menu-options-container h2 {
     font-size: 24px;
     text-align: start;
+}
+
+.cl-form-container {
+    background-color: rgb(25, 24, 34);
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    color: var(--sena);
+    width: calc(100% - 20px);
+}
+
+.cl-form-group {
+    margin-bottom: 20px;
+    line-height: 30px;
+    list-style: none;
+}
+
+.cl-form-group ul {
+    list-style: none;
+    padding: 0;
+}
+
+.cl-form-group li {
+    background-color: var(--sept);
+    padding: 8px;
+    margin-bottom: 3px;
+    border: 2px solid transparent;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.cl-form-group li:hover {
+    background-color: transparent;
+    border: 2px solid var(--tert)
+}
+
+.cl-form-group label {
+    font-size: 12px;
+    color: rgb(142, 140, 148);
+}
+
+.card-form-image {
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.card-form-container {
+    background-color: #0c171f;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px 20px 10px;
+    border-radius: 8px;
+    text-decoration-color: transparent;
+    margin-bottom: 5px;
+}
+
+.card-form-container h3 {
+    display: flex;
+    padding: 4px 8px 4px 8px;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--sena);
+}
+
+.card-form-container hr {
+    margin: 1rem 0;
+    color: inherit;
+    background-color: var(--tert);
+    border: 0;
+    opacity: 1;
+}
+
+.card-info {
+    width: 100%;
+    padding: 20px 20px 20px 20px;
+    line-height: 20px;
+    color: var(--sena);
 }
