--- a/frontend/src/components/QuizzGame/styles.css
+++ b/frontend/src/components/QuizzGame/styles.css
@@ -53,14 +53,12 @@
     overflow-x: scroll;
 }
 
-.quizz-container::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-}
-
 .quest-container {
-    padding: 10px;
-    min-width: 330px;
+    color: #fff;
+    padding: 30px;
+    font-size: x-large;
+    overflow-y: scroll;
+    border-right: 1px solid var(--tert);
 }
 
 .menu-options-container {
@@ -82,48 +80,39 @@
     align-self: center;
 }
 
-.menu-options-container h2 {
-    font-size: 24px;
-    text-align: start;
-}
-
-.cl-form-container {
-    background-color: rgb(25, 24, 34);
+.form {
+    background-color: #0c171f;
     margin-top: 5px;
     margin-bottom: 5px;
     border-radius: 10px;
     color: var(--sena);
-    width: calc(100% - 20px);
 }
 
-.cl-form-group {
+.form-group {
     margin-bottom: 20px;
     line-height: 30px;
     list-style: none;
+    width: 100%;
 }
 
-.cl-form-group ul {
+.form-group ul {
     list-style: none;
     padding: 0;
 }
 
-.cl-form-group li {
+.form-group li {
     background-color: var(--sept);
     padding: 8px;
     margin-bottom: 3px;
     border: 2px solid transparent;
+    transition: all 0.2s ease-out;
     border-radius: 20px;
     cursor: pointer;
 }
 
-.cl-form-group li:hover {
+.form-group li:hover {
     background-color: transparent;
     border: 2px solid var(--tert)
-}
-
-.cl-form-group label {
-    font-size: 12px;
-    color: rgb(142, 140, 148);
 }
 
 .card-form-image {
@@ -136,10 +125,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 10px 20px 10px;
+    padding: 20px;
     border-radius: 8px;
     text-decoration-color: transparent;
     margin-bottom: 5px;
+    overflow-x: scroll;
 }
 
 .card-form-container h3 {
