--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
