--- a/frontend/src/components/layout/UserLayout/styles.css
+++ b/frontend/src/components/layout/UserLayout/styles.css
@@ -1,10 +1,3 @@
-.user-display-card {
-    min-width: 290px;
-    background-color: var(--deca);
-    border-radius: 30px;
-    padding: 20px;
-}
-
 .user-card-image {
     max-width: 300px;
     border-radius: 30px 30px 0px 0px;
@@ -79,22 +72,12 @@
 }
 
 @media screen and (max-width: 550px) {
-    .user-display-card {
-        width: 270px;
-        background-color: var(--deca);
-        border-radius: 30px;
-        padding: 5px;
-        border: 1px solid var(--sena);
-        font-size: x-small;
-    }
     .user-card-image {
-        max-width: 250px;
-        max-height: 200px;
         border-radius: 30px;
         padding: 10px;
     }
     .user-card-container {
-        max-width: 200px;
+        width: 100%;
         align-items: center;
         text-decoration-color: transparent;
         padding: 10px;
