--- a/frontend/src/components/shared/NavBar/styles.css
+++ b/frontend/src/components/shared/NavBar/styles.css
@@ -25,7 +25,7 @@
 
 .nav-menu {
     display: grid;
-    grid-template-columns: repeat(8, auto);
+    grid-template-columns: repeat(3, auto);
     grid-gap: 10px;
     list-style: none;
     text-align: center;
@@ -62,40 +62,72 @@
     display: none;
 }
 
+.nav-menu-m {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    width: 50%;
+    height: 14.3in;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.9s ease;
+}
+
+.nav-menu-m.active {
+    background: var(--quin);
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+    padding: 40px 30px 20px 30px;
+}
+
 .nav-links-mobile {
-    display: none;
+    display: table;
+    text-align: center;
+    width: 100%;
+    padding: 1.4rem;
+    border-radius: 12px 0px;
+    color: var(--sena);
+    font-size: 20px;
+    background-color: var(--quar);
+    margin-bottom: 4px;
+}
+
+.nav-links-mobile:hover {
+    background-color: var(--octo);
+    color: #fff;
+    transition: 250ms;
 }
 
 .nav-links-image {
-    display: none;
+    display: flex;
+    text-align: center;
+    border-radius: 360px;
+    border: 3px solid var(--tert);
+    text-decoration: none;
+    width: 120px;
+    height: 120px;
 }
 
 .menu-icon {
-    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 50%);
+    font-size: 1.8rem;
+    cursor: pointer;
 }
 
-@media screen and (max-width: 960px) {
-    .NavbarItems {
+@media screen and (max-width: 900px) {
+    .nav-item {
         position: relative;
     }
-    .nav-menu {
-        display: flex;
-        flex-direction: column;
+    .nav-menu-m {
         width: 100%;
-        height: 14.3in;
         position: absolute;
-        top: 80px;
-        left: -100%;
-        opacity: 1;
-        transition: all 0.9s ease;
-    }
-    .nav-menu.active {
-        background: var(--quin);
-        left: 0;
-        opacity: 1;
-        transition: all 0.5s ease;
-        z-index: 1;
-        padding: 40px 30px 20px 30px;
     }
     .navbar-logo {
         top: 0;
@@ -104,19 +136,6 @@
         margin-left: 15px;
         margin-bottom: 30px;
         height: 50px;
-    }
-    .menu-icon {
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: translate(-100%, 50%);
-        font-size: 1.8rem;
-        cursor: pointer;
-    }
-    .fa-times {
-        color: #fff;
-        font-size: 2rem;
     }
     .profile-nav {
         display: flex;
@@ -127,20 +146,7 @@
         padding: 10px 10px 20px;
     }
     .nav-links {
-        display: block;
-        background-color: var(--quar);
-        text-align: center;
-        padding: 1.7rem;
-        margin: auto;
-        width: 100%;
-        border-radius: 20px;
-        color: var(--sena);
-        font-size: 20px;
-    }
-    .nav-links:hover {
-        background-color: var(--octo);
-        transition: 250ms;
-        border-radius: 20px;
+        display: none;
     }
     .nav-links-mobile {
         text-align: center;
