--- a/frontend/src/components/layout/UserLayout/styles.css
+++ b/frontend/src/components/layout/UserLayout/styles.css
@@ -27,17 +27,21 @@
     height: 50px;
 }
 
-.user-minicard-container {
-    height: 90px;
+.sm-card-container {
+    height: 84px;
     background-color: var(--deca);
     color: #fff;
     border-radius: 14px 0px;
-    align-items: flex-start;
-    justify-content: start;
     display: flex;
+    cursor: pointer;
+    transition: all 0.2s ease-in;
 }
 
-.user-minicard-image {
+.sm-card-container:hover {
+    box-shadow: 0px 20px 30px 8px rgba(156, 15, 34, 0.315);
+}
+
+.sm-card-image {
     height: 100%;
     max-width: 88px;
     padding: 8px;
@@ -47,14 +51,14 @@
     border-style: double;
 }
 
-.user-minicard-username {
+.sm-card-title {
     padding: 10px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
 }
 
-.user-minicard-info {
+.sm-card-info {
     align-items: center;
     display: inline-flex;
     padding: 20px 2px;
@@ -64,7 +68,7 @@
     color: var(--sena);
 }
 
-.user-minicard-info li {
+.sm-card-info li {
     list-style: none;
     margin-right: 10px;
 }
