--- a/frontend/src/pages/profiles/UserProfile/styles.css
+++ b/frontend/src/pages/profiles/UserProfile/styles.css
@@ -30,7 +30,8 @@
     border-style: double;
     justify-content: center;
     align-items: center;
-    border-radius: 30px 0px;
+    border-radius: 12px 0px;
+    display: flex
 }
 
 @media screen and (max-width: 550px) {
