--- a/frontend/src/components/layout/UserLayout/styles.css
+++ b/frontend/src/components/layout/UserLayout/styles.css
@@ -1,30 +1,38 @@
-.user-card-image {
-    max-width: 300px;
-    border-radius: 30px 30px 0px 0px;
+.user-box-container {
+    margin: 0;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
 }
 
 .user-card-container {
-    width: 300px;
-    justify-content: center;
+    background-color: var(--deca);
+    justify-content: space-around;
     align-items: center;
-    text-decoration-color: transparent;
-    padding: 8px;
-    display: flex;
+    padding: 10px;
+    border-radius: 0px 12px 12px 0px;
+}
+
+.user-card-image {
+    background-color: var(--deca);
+    border: 5px solid var(--tert);
+    border-style: double;
+    max-width: 200px;
+    border-radius: 12px 0px 0px 12px;
+    margin: 0;
 }
 
 .user-badge-container {
-    height: 60px;
+    max-width: 400px;
     display: flex;
-    overflow-x: auto;
-    background-color: var(--sept);
     border-radius: 10px;
-    padding: 0px;
+    margin: 0;
 }
 
 .badge-item {
     padding: 4px;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 }
 
 .sm-card-container {
@@ -75,27 +83,16 @@
 
 @media screen and (max-width: 550px) {
     .user-card-image {
-        border-radius: 30px;
+        max-width: 100px;
         padding: 10px;
     }
     .user-card-container {
-        width: 100%;
         align-items: center;
         text-decoration-color: transparent;
         padding: 10px;
     }
-    .user-card-container h3 {
-        text-align: center;
-        font-size: 15px;
-        font-weight: 500;
-        min-height: 40px;
-        color: #fff;
-    }
-    .user-card-container h2 {
-        text-align: center;
-        font-size: 17px;
-        font-weight: 700;
-        min-height: 40px;
-        color: #fff;
+    .badge-item {
+        width: 30px;
+        height: 30px;
     }
 }
