--- a/frontend/src/components/shared/Dropdown/styles.css
+++ b/frontend/src/components/shared/Dropdown/styles.css
@@ -1,12 +1,10 @@
 .dropdonw-menu {
-    background: linear-gradient(138deg, rgb(31, 23, 26) 18%, rgba(29, 17, 22, 0.982) 70%, rgba(32, 6, 16, 0.982)95%);
-    max-width: 330px;
-    position: absolute;
-    top: 80px;
+    background-color: var(--seco);
+    width: 90%;
     list-style: none;
     text-align: center;
-    border-radius: 30px;
-    padding: 15px 10px 15px 10px;
+    border-radius: 12px 0px;
+    padding: 15px;
     justify-content: space-between;
 }
 
@@ -19,6 +17,7 @@
     height: 64px;
     border-radius: 50px;
     background-color: var(--tert);
+    border-radius: 12px 0px;
 }
 
 .dropdown-menu.clicked {
