--- a/frontend/src/components/shared/NavBar/styles.css
+++ b/frontend/src/components/shared/NavBar/styles.css
@@ -57,26 +57,27 @@
     display: flex;
     flex-direction: column;
     list-style: none;
-    width: 50%;
-    height: 14.3in;
-    position: fixed;
-    top: 80px;
+    width: 100%;
+    height: 15.0in;
+    position: absolute;
     left: -100%;
     opacity: 1;
     transition: all 0.4s ease;
+    overflow: scroll;
 }
 
 .nav-menu-m.active {
     background: var(--quin);
     left: 0;
     opacity: 1;
-    transition: all 0.5s ease;
     z-index: 1;
     padding: 40px 30px 20px 30px;
+    overflow-y: scroll;
 }
 
 .nav-links-mobile {
     display: table;
+    overflow-y: scroll;
     text-align: center;
     width: 90%;
     padding: 1.4rem;
@@ -103,7 +104,7 @@
     height: 120px;
 }
 
-.profile-nav {
+.nav-menu-top {
     display: flex;
     width: 100%;
     align-items: center;
@@ -112,7 +113,7 @@
     padding: 10px 10px 20px;
 }
 
-.profile-nav h2 {
+.nav-menu-top h2 {
     cursor: pointer;
 }
 
