--- a/frontend/src/components/shared/NavBar/styles.css
+++ b/frontend/src/components/shared/NavBar/styles.css
@@ -13,13 +13,14 @@
 
 .nav-menu {
     display: grid;
+    justify-content: flex-end;
     grid-template-columns: repeat(3, auto);
     grid-gap: 10px;
+    width: 100%;
     list-style: none;
     text-align: center;
-    width: 70vw;
-    justify-content: flex-end;
-    margin-right: 2rem;
+    margin-right: 6px;
+    margin-bottom: 0;
 }
 
 .fa-firstdraft {
@@ -30,22 +31,22 @@
 .nav-item {
     display: flex;
     align-items: center;
-    height: 84px;
+    justify-content: last baseline;
+    height: 100%;
     cursor: pointer;
 }
 
 .nav-links {
     color: #fff;
     text-decoration: none;
-    padding: 0.5rem 1rem;
-    margin-bottom: 20px;
+    padding: 8px;
+    border-radius: 20px;
+    transition: all 0.2s ease-out;
 }
 
 .nav-links:hover {
-    background-color: var(--octo);
-    border-radius: 50px;
-    transition: all 0.2s ease-out;
     color: #fff;
+    background-color: var(--octo);
 }
 
 .fa-bars {
@@ -64,6 +65,7 @@
     width: 100%;
     height: 15.0in;
     position: absolute;
+    top: 0;
     left: -100%;
     opacity: 1;
     transition: all 0.4s ease;
@@ -132,6 +134,9 @@
 }
 
 @media screen and (max-width: 550px) {
+    .navbar {
+        font-size: medium;
+    }
     .nav-menu-m {
         width: 100%;
         overflow-y: scroll;
