--- a/frontend/src/assets/css/styles.css
+++ b/frontend/src/assets/css/styles.css
@@ -44,17 +44,12 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-.dark-card {
-    background-color: var(--dark-prim);
-    color: var(--sena);
-    box-shadow: 1px 0px 3px 2.50px rgba(17, 21, 34, 0.767);
-    border: 0.4px solid #e0e0e036;
-    transition: all 0.2s ease;
-}
-
-.dark-card:hover {
-    border: 0.4px solid rgb(138, 134, 134);
-    box-shadow: 1px 0px 3px 2.50px rgba(54, 60, 77, 0.767);
+abbr[title],
+acronym {
+    position: relative;
+    transition: all 0.1s ease-in-out;
+    border-bottom: none;
+    cursor: pointer;
 }
 
 .dark-card {
@@ -106,20 +101,23 @@ code {
     padding: 10px 20px;
     border-radius: 6px;
     font-size: large;
-    border: none;
-    color: #fff;
+    color: var(--sena);
     cursor: pointer;
     background-color: transparent;
     border: 2px solid var(--seco);
-    border-style: double;
     transition: all 0.3s ease-out;
 }
 
 .cl-btn:hover {
-    background-color: var(--tert);
     color: #fff;
     border: 2px solid var(--seco);
-    box-shadow: 1px 0px 2px 1px rgba(54, 60, 77, 0.767);
+    box-shadow: 1px 0px 3px 2px rgba(110, 20, 32, 0.767);
+}
+
+.cl-btn :focus {
+    color: #fff;
+    border: 2px solid var(--seco);
+    box-shadow: 1px 0px 3px 2px rgba(110, 20, 32, 0.767);
 }
 
 .menu-options-container {
@@ -161,12 +159,4 @@ code {
     color: #fff;
     border-radius: 4px;
     border: 2px solid var(--sept);
-}
-
-abbr[title],
-acronym {
-    position: relative;
-    transition: all 0.1s ease-in-out;
-    border-bottom: none;
-    cursor: pointer;
 }
