--- a/frontend/src/components/layout/ArticleLayout/styles.css
+++ b/frontend/src/components/layout/ArticleLayout/styles.css
@@ -3,17 +3,16 @@
     justify-content: center;
     background-color: var(--deca);
     max-height: 600px;
-    text-align: center;
     border-radius: 10px;
-    overflow-y: scroll;
     padding: 20px;
 }
 
 .article-content {
     display: grid;
-    padding: 30px;
+    padding: 20px;
     text-align: justify;
     font-size: x-large;
+    overflow-y: scroll;
 }
 
 .article-card-info {
@@ -62,22 +61,25 @@
 }
 
 .article-card-container {
-    min-width: 300px;
-    height: 250px;
+    max-width: 300px;
+    height: 150px;
     text-align: justify;
-    padding: 14px;
-    border-radius: 10px;
-    margin: 5px;
-    overflow-y: scroll;
+    font-size: medium;
+}
+
+.article-card-container img {
+    border-radius: 12px;
+    border: 2px solid transparent;
+    padding: 0;
 }
 
 .article-card-container h3 {
     text-align: center;
     font-size: 14px;
     font-weight: 700;
-    min-height: 40px;
+    min-height: 20px;
     color: #fff;
-    text-decoration: transparent;
+    margin: 0;
 }
 
 .viewed-container {
