--- a/frontend/src/assets/css/styles.css
+++ b/frontend/src/assets/css/styles.css
@@ -8,7 +8,7 @@
     --sena: #c2c2c2;
     --sept: #141f29;
     --octo: #a31836;
-    --nona: #141f299c;
+    --nona: #0a0f14ee;
     --deca: #0b1218;
     --dark-prim: #0c171f;
 }
@@ -51,6 +51,42 @@ acronym {
     border-radius: 8px;
     text-decoration: none;
     cursor: pointer;
+}
+
+.form {
+    background-color: #0c171f;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    color: var(--sena);
+    padding: 8px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+    line-height: 30px;
+    list-style: none;
+    width: 100%;
+}
+
+.form-group ul {
+    list-style: none;
+    padding: 0;
+}
+
+.form-group li {
+    background-color: var(--sept);
+    padding: 8px;
+    margin-bottom: 3px;
+    border: 2px solid transparent;
+    transition: all 0.2s ease-out;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.form-group li:hover {
+    background-color: transparent;
+    border: 2px solid var(--tert)
 }
 
 .modal-content {
